--- a/index.html
+++ b/index.html
@@ -1,29 +1,86 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+<html>
+  <head lang="en">
+    <title>My page 2</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Webfont&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap">
 </head>
-<body>
-    <div id="container">
-        <div class="item">1</div>
-        <div class="item">2</div>
-        <div class="item">3</div>
-        <div class="item">4</div>
-        <div class="item">5</div>
-        <div class="item">6</div>
-        <div class="item">7</div>
-        <div class="item">8</div>
-        <div class="item">9</div>
-        <div class="item">10</div>
-        <div class="item">11</div>
-    </div>
-    <div id="container2">
-        <div class="item">1</div>
-        <div class="item">2</div>
-        <div class="item">3</div>
-    </div>
-</body>
+  <body>
+    <header class="header_container">
+      <a class="header_item1" href="index.html"> 
+        <img src="img/logo.svg" alt="Logo">
+      </a>
+      <nav class="header_item2">
+        <ul class="menu_container">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html">About</a></li>
+            <li><a href="index.html">Portfolio</a></li>
+            <li><a href="index.html">Contacts</a></li>
+        </ul>
+      </nav>
+    </header>
+    <section class="hero-section">
+        <img src="img/slide.jpg" alt="Slide">
+        <h1>We are about to change the way <br>
+            <span class="custom-font">you publish on the web</span>
+        </h1>
+      
+    </section>
+    <section class="another-section">
+        <h2>About Us</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi rem vel est quod magni reprehenderit debitis dolore minus. Sit ex laborum autem asperiores hic quis ab corrupti quas aut laudantium.
+        </p>
+    </section>
+    <section class="stats-section">
+        <ul>
+            <li>
+                <h3>548</h3>
+                <p>Projects Completed</p>
+            </li>
+            <li>
+                <h3>1234</h3>
+                <p>Working hours</p>
+            </li>
+            <li>
+                <h3>612</h3>
+                <p>Positive feedback</p>
+            </li>
+            <li>
+                <h3>735</h3>
+                <p>Happy Clients</p>
+            </li>
+        </ul>
+    </section>
+    <section class="other-section">
+        <h2>Best projects</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet sunt laudantium, cupiditate vitae fugiat obcaecati temporibus hic voluptates ullam quae aut perferendis alias enim delectus tempore officia non est. Ab.</p>
+        <ul>
+            <li><img src="img/portfolio/1.jpg"><a href="index.html"><h3>IDK</h3><span>hello</span></a></li>
+            <li><img src="img/portfolio/2.jpg"><a href="index.html"><h3>IDK</h3><span>hello</span></a></li>
+            <li><img src="img/portfolio/3.jpg"><a href="index.html"><h3>IDK</h3><span>hello</span></a></li>
+            <li><img src="img/portfolio/4.jpg"><a href="index.html"><h3>IDK</h3><span>hello</span></a></li>
+            <li><img src="img/portfolio/5.jpg"><a href="index.html"><h3>IDK</h3><span>hello</span></a></li>
+            <li><img src="img/portfolio/6.jpg"><a href="index.html"><h3>IDK</h3><span>hello</span></a></li>
+            <li><img src="img/portfolio/7.jpg"><a href="index.html"><h3>IDK</h3><span>hello</span></a></li>
+            <li><img src="img/portfolio/8.jpg"><a href="index.html"><h3>IDK</h3><span>hello</span></a></li>
+            <li><img src="img/portfolio/9.jpg"><a href="index.html"><h3>IDK</h3><span>hello</span></a></li>
+        </ul>
+    </section>
+    <section class="quote-section">
+        <q>g bugygo unpiu ugytfuf gyug</q>
+    </section>
+    <section class="image-section">
+        <ul>
+            <li><a href=""><img src="img/clients/1.png"></a></li>
+            <li><a href=""><img src="img/clients/2.png"></a></li>
+            <li><a href=""><img src="img/clients/3.png"></a></li>
+            <li><a href=""><img src="img/clients/4.png"></a></li>
+            <li><a href=""><img src="img/clients/5.png"></a></li>
+        </ul>
+    </section>
+    <footer>
+        &copy; something should be written here
+    </footer>
+  </body>
 </html>
